flex/flex-tests/testData/js2_highlighting/VariableUnderPackage.js2
package {
  var <error descr="Variable 'Foo' should be defined in file 'Foo.js2'">Foo</error> = /Name=(?P<filename>.*?)(&|$)/ix;
}